# QCproject

./: P%A (flat phase).ipynb  P%A(Potential well).ipynb  P%A(RNG phase).ipynb  P%A(exponential phase).ipynb  PA(periodicphase).ipynb  RNG.ipynb  aa.ipynb  appendix.txt  asg11.ipynb  bb.ipynb  cc.ipynb  fideality.ipynb  initialtrash.ipynb  measure befor dagger.ipynb  nRNG.py  phase and amplitude(linear phase).ipynb  pyproject.toml  qq.ipynb  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  report1.aux  report1.fdb_latexmk  report1.fls  report1.out  report1.tex  report1.toc  success prob vs delta.ipynb  success prob vs intert.ipynb  thrash.ipynb  thrash2.ipynb  tryouts.ipynb
.devcontainer/: Dockerfile  devcontainer.json
