[project]
name = "mps-initializer"
version = "0.1.0"
description = ""
authors = [
    {name = "Siavash Davani",email = "siavash.davani@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false # loosens the required fields for [project]

[tool.poetry.dependencies]
python = "^3.11"
qiskit = { version = "1.3.*", extras = [
  "visualization", # contains qiskit visualization packages and Jupyter notebooks
] }
qiskit-aer = { version = "0.16.*" }
# qiskit-aer-gpu-cu11 = { version = "0.16.*" }

numba = "0.60.*" # quimb req
networkx = "3.4.*" # quimb plotting
optuna = "4.2.*" # quimb req?
quimb = "1.10.*"
pydantic = "2.10.*"

[tool.poetry.group.visualization.dependencies]
ipykernel = "6.*" # it is needed for jupyter notebooks in vscode
